<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 Kaushik N. Sanji
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/black"
    android:orientation="vertical">

    <TextView
        android:id="@+id/number_picker_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/qnpl_number_picker_text_bottom_margin"
        android:layout_marginEnd="@dimen/qnpl_number_picker_text_right_margin"
        android:layout_marginLeft="@dimen/qnpl_number_picker_text_left_margin"
        android:layout_marginRight="@dimen/qnpl_number_picker_text_right_margin"
        android:layout_marginStart="@dimen/qnpl_number_picker_text_left_margin"
        android:layout_marginTop="@dimen/qnpl_number_picker_text_top_margin"
        android:fontFamily="sans-serif"
        android:text="@string/qnpl_number_picker_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/qnpl_number_picker_text_size"
        android:textStyle="bold" />

    <NumberPicker
        android:id="@+id/number_picker_id"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/qnpl_number_picker_height"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/qnpl_number_picker_bottom_margin"
        android:layout_marginEnd="@dimen/qnpl_number_picker_right_margin"
        android:layout_marginLeft="@dimen/qnpl_number_picker_left_margin"
        android:layout_marginRight="@dimen/qnpl_number_picker_right_margin"
        android:layout_marginStart="@dimen/qnpl_number_picker_left_margin"
        android:layout_weight="2"
        android:solidColor="@android:color/holo_blue_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/qnpl_button_layout_margin"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/qd_negative_button_id"
            style="@style/qnpl_button_style"
            android:layout_marginEnd="@dimen/qnpl_cancel_button_right_margin"
            android:layout_marginRight="@dimen/qnpl_cancel_button_right_margin"
            android:gravity="end|center"
            android:paddingEnd="@dimen/qnpl_cancel_button_pad_right"
            android:paddingLeft="@dimen/qnpl_cancel_button_pad_left"
            android:paddingRight="@dimen/qnpl_cancel_button_pad_right"
            android:paddingStart="@dimen/qnpl_cancel_button_pad_left"
            android:text="@string/negative_cancel_button_text" />

        <Button
            android:id="@+id/qd_positive_button_id"
            style="@style/qnpl_button_style"
            android:layout_marginLeft="@dimen/qnpl_set_button_left_margin"
            android:layout_marginStart="@dimen/qnpl_set_button_left_margin"
            android:paddingEnd="@dimen/qnpl_set_button_pad_right"
            android:paddingLeft="@dimen/qnpl_set_button_pad_left"
            android:paddingRight="@dimen/qnpl_set_button_pad_right"
            android:paddingStart="@dimen/qnpl_set_button_pad_left"
            android:text="@string/positive_set_button_text" />

    </LinearLayout>

</LinearLayout>
