<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kaushiknsanji.birdquiz.QuizActivity">

    <RelativeLayout
        android:id="@+id/quiz_header_layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/quizHeaderFooterBackgroundBlueGrey900"
        android:padding="@dimen/quiz_header_layout_padding">

        <TextView
            android:id="@+id/question_no_id"
            style="@style/header_score_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0/10" />

        <TextView
            style="@style/header_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/question_no_id"
            android:layout_toRightOf="@id/question_no_id"
            android:text="@string/header_text_question" />

        <TextView
            android:id="@+id/total_score_id"
            style="@style/header_score_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            tools:text="0/10" />

        <TextView
            style="@style/header_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/total_score_id"
            android:layout_toStartOf="@id/total_score_id"
            android:text="@string/header_text_score" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/quiz_footer_layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/quizHeaderFooterBackgroundBlueGrey900"
        android:padding="@dimen/quiz_footer_layout_padding">

        <TextView
            android:id="@+id/count_down_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawableLeft="@drawable/ic_timer_off"
            android:drawablePadding="@dimen/quiz_timer_text_drawable_padding"
            android:drawableStart="@drawable/ic_timer_off"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/quizFooterTextBlueGrey50"
            android:textStyle="bold"
            tools:text="00:00" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/vscroll_content_area_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/quiz_footer_layout_id"
        android:layout_below="@id/quiz_header_layout_id"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/content_area_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/quizBackgroundBlueGrey250">

            <ImageView
                android:id="@+id/hint_image_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/quiz_hint_image_height"
                android:adjustViewBounds="true"
                android:background="@drawable/image_border"
                android:padding="@dimen/quiz_hint_image_border_border_width"
                android:scaleType="fitXY"
                android:src="@drawable/hidden_image" />

            <TextView
                android:id="@+id/question_text_id"
                style="@style/option_dialog_style.question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hint_image_id"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="@dimen/option_cntr_right_margin"
                android:layout_marginLeft="@dimen/option_cntr_left_margin"
                android:layout_marginRight="@dimen/option_cntr_right_margin"
                android:layout_marginStart="@dimen/option_cntr_left_margin"
                android:layout_marginTop="@dimen/question_text_top_margin"
                android:textSize="@dimen/question_text_size"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus faucibus est maximus velit rhoncus dictum. Quisque sit amet malesuada sem. Curabitur a condimentum leo. " />

            <RelativeLayout
                android:id="@+id/option_container_area_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_text_id"
                android:layout_marginBottom="@dimen/option_cntr_bottom_margin"
                android:layout_marginEnd="@dimen/option_cntr_right_margin"
                android:layout_marginLeft="@dimen/option_cntr_left_margin"
                android:layout_marginRight="@dimen/option_cntr_right_margin"
                android:layout_marginStart="@dimen/option_cntr_left_margin"
                android:layout_marginTop="@dimen/option_cntr_top_margin"
                android:background="@drawable/option_border_frame"
                android:gravity="center_horizontal">

                <!--<CheckBox
                    style="@style/option_dialog_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Quick brown fox jumped over the lazy dog"/>-->

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/button_content_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/option_container_area_id"
                android:layout_marginBottom="@dimen/button_content_bottom_margin"
                android:layout_marginEnd="@dimen/button_content_right_margin"
                android:layout_marginLeft="@dimen/button_content_left_margin"
                android:layout_marginRight="@dimen/button_content_right_margin"
                android:layout_marginStart="@dimen/button_content_left_margin"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/submit_button_id"
                    style="@style/submit_hint_button_style"
                    android:layout_width="@dimen/submit_button_width"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/submit_button_right_margin"
                    android:layout_marginRight="@dimen/submit_button_right_margin"
                    android:layout_weight="1"
                    android:text="@string/submit_button_text" />

                <Button
                    android:id="@+id/show_hint_button_id"
                    style="@style/submit_hint_button_style"
                    android:layout_width="@dimen/show_hint_button_width"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/show_hint_button_left_margin"
                    android:layout_marginStart="@dimen/show_hint_button_left_margin"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/show_hint_button_text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/hint_content_box_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_content_id"
                android:layout_marginBottom="@dimen/hint_box_bottom_margin"
                android:layout_marginEnd="@dimen/hint_box_right_margin"
                android:layout_marginLeft="@dimen/hint_box_left_margin"
                android:layout_marginRight="@dimen/hint_box_right_margin"
                android:layout_marginStart="@dimen/hint_box_left_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/hint_text_box_id"
                    android:layout_width="@dimen/hint_text_box_width"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@drawable/hint_text_box_shape"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/background_dark"
                    tools:text="Quick brown fox jumped over the lazy dog" />

                <ImageButton
                    android:id="@+id/image_redirect_button_id"
                    android:layout_width="@dimen/image_redirect_button_width"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/image_redirect_button_left_margin"
                    android:layout_marginStart="@dimen/image_redirect_button_left_margin"
                    android:adjustViewBounds="true"
                    android:background="@color/imgFlagBackgroundBlueGrey50"
                    android:src="@drawable/ic_assistant_photo" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
